Bugfix: removed horizontal scroll bar of livestream

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,4 +2,5 @@
 
 #page-container {
   height: calc(100vh - 15%);
+  width: 100vw;
 }
