--- a/src/styles/pages/_livestream.scss
+++ b/src/styles/pages/_livestream.scss
@@ -2,7 +2,7 @@
     .streaming {
         display: flex;
         flex-direction: column;
-        width: 100vw;
+        width: 100%;
         height: 91.4vh;
     }
     .streamingBottom {
@@ -51,7 +51,7 @@
     .streaming {
         display: flex;
         flex-direction: row;
-        width: 100vw;
+        width: 100%;
         gap: 27vw;
         height: 87.5vh;
     }
@@ -82,6 +82,7 @@
     }
     .livebody {
         position: absolute;
+        width: 100%;
         top: 7.5vh;
     }
 }
